# macroboard

./: .gitignore  DEVELOPMENT_STATUS.md  ENVIRONMENT_STATUS.md  POST_MVP.md  QUICK_BUILD_GUIDE.md  README.md  REFERENCE.md  TODO.md
firmware/: BUILD_STATUS.md  CMakeLists.txt  README.md  REQUIREMENTS.md  SETUP.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  common.h  config.h  idf_component.yml  main.c  tusb_config.h
firmware/main/hardware/: buttons.c  buttons.h  display_mux.c  display_mux.h  encoder.c  encoder.h  gc9a01.c  gc9a01.h  gc9a01_backlight.c  leds.c  leds.h  night_mode.c  night_mode.h
firmware/main/network/: ota_updater.c  ota_updater.h  wifi_manager.c  wifi_manager.h
firmware/main/profile/: action_executor.c  action_executor.h  profile_manager.c  profile_manager.h  profile_types.h
firmware/main/protocol/: image_transfer.c  image_transfer.h  packet_parser.c  packet_parser.h  protocol_handler.c  protocol_handler.h  protocol_types.h
firmware/main/storage/: image_storage.c  image_storage.h  nvs_manager.c  nvs_manager.h  profile_storage.c  profile_storage.h
firmware/main/usb/: device_descriptor.c  usb_descriptors.c  usb_hid_keyboard.c  usb_hid_keyboard.h  usb_hid_raw.c  usb_hid_raw.h  usb_vendor.c  usb_vendor.h
firmware/main/utils/: crc.c  crc.h  jpeg_decode_util.h  jpeg_decoder.c  logger.c  logger.h  text_render.c  text_render.h
firmware/plans/: REQUIREMENTS.md
firmware/scripts/: docker-build.ps1  docker-build.sh  flash.ps1
hardware/case/: cover_bottom.scad  cover_bottom.stl  cover_top.scad  cover_top.stl  stand.scad  stand.stl
hardware/pcb/: elgato.dsn  elgato.kicad_pcb  elgato.kicad_prl  elgato.kicad_pro  elgato.kicad_sch  elgato.round-tracks-config
plans/: README.md  ROADMAP.md  action_sequences_spec.md  architecture.md  architecture_review_3apps_vs_1app.md  backend_architecture.md  backend_architecture_part2.md  backend_summary.md  docker_diagrams.md  docker_integration.md  docker_quick_start.md  docker_summary.md  esp_idf_components.md  folder_action_spec.md  folder_system.md  implementation_plan.md  plugins.md  profile_sync_flow.md  protocol.md  storage.md  streamdeck_compat.md  system_flow.md  ui_backend_device_integration.md  ui_refactor.md
software/: BACKEND_IMPLEMENTATION.md  BUILD_STATUS.md  CRITICAL_FIXES_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_STATUS.md  LINUX_SUPPORT.md  MacroKeyboard.sln  PHASE_2_REPORT.md  PROFILE_LOADING_IMPLEMENTATION.md  QUICK_START.md  QUICK_WINS_REPORT.md  README.md  REQUIREMENTS.md  SETUP.md  TODO_ANALYSIS.md  TRAYAPP_REPORT.md  TROUBLESHOOTING.md
software/installer/: README.md
software/plans/: architecture.md  diagrams.md  plugin_system.md
software/scripts/: 99-macrokeyboard.rules  (+2 more)
(+113 files in other folders)
